--- a/VendorOrder/Views/Orders/Index.cshtml
+++ b/VendorOrder/Views/Orders/Index.cshtml
@@ -1,20 +1,22 @@
 @{
   Layout = "_Layout";
 }
-@using VendorOrder.Models;
 
-<h1>Your Vendors!</h1>
+@using VendorOrder.Models
+
+<h1>All Orders!</h1>
+
 @if(Model.Count == 0)
 {
   <p>List is empty</p>
-  <a href="vendors/new">Add a new Vendor</a>
+  <a href="orders/new">Add a new Order</a>
 }
 else
 {
-  @foreach (Vendor vendor in Model)
+  @foreach (Order order in Model)
   {
-      <p>@Model.Name</p>
-      <p>@Model.Description</p>
+      <p>@Model.Product</p>
+      <p>@Model.Quantity</p>
       <p>@Model.Address</p>
       <p>Number of ORDERS = @Model.Orders.Count</p>
       <a href="/vendor/@Model.Id/orders/new"><Button class="btn btn-success btn-lg">Add Order</Button></a> 
