--- a/VendorOrder/Views/Orders/New.cshtml
+++ b/VendorOrder/Views/Orders/New.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@using VendorOrders.Solution;
+@using VendorOrder.Models;
 
 <div class="row">
   <div class="col-md-6 offset-md-3">
