further troubleshooting and refactoring errors.

--- a/VendorOrder/Views/Shared/_Layout.cshtml
+++ b/VendorOrder/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <a class="nav-link" href="/vendors">Your Vendors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/vendors/create">Add a New Vendor</a>
+            <a class="nav-link" href="/vendors/new">Add a New Vendor</a>
           </li>
         </ul>
       </div>
