--- a/VendorOrder/Views/Orders/New.cshtml
+++ b/VendorOrder/Views/Orders/New.cshtml
@@ -11,16 +11,12 @@
       <div class="form-group">
 
 
-        <label for="title">Order Name</label>
-        <input type="text" name="title" class="form-control">
+        <label for="product">Product</label>
+        <input type="text" name="product" class="form-control">
       </div>
       <div class="form-group">
-        <label for="description">Order Details</label>
-        <input type="text" name="description" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="price">Order Cost</label>
-        <input type="text" name="price" class="form-control">
+        <label for="quantity">Product Quantity</label>
+        <input type="text" name="quantity" class="form-control">
       </div>
         <input type="hidden" name="id" value="@Model.Id">
       <button type="submit" class="btn btn-primary btn-block">Add</button>
