add styles and update views to reflect formatting.

--- a/VendorOrder/Views/Home/Index.cshtml
+++ b/VendorOrder/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
   Layout = "_Layout";
 }
 
+<div class="jumbotron">
 <h1> Welcome to Pierre's Vendor Order Tracker!</h1>
 
 <a href="/vendors"><button>Click Here to Enter!</button></a>
+</div>
