--- a/VendorOrder/Views/Orders/New.cshtml
+++ b/VendorOrder/Views/Orders/New.cshtml
@@ -4,21 +4,23 @@
 
 @using VendorOrder.Models;
 
-<div class="row">
-  <div class="col-md-6 offset-md-3">
-    <h1 class="text-center">Add Order for @Model.Name</h1>
-    <form action="/vendors/@Model.Id/orders" method="post">
-      <input id="vendorId" name="nameId" type="hidden" value="@Model.Id">
-      <div class="form-group">
-        <label for="product">Product</label>
-        <input type="text" name="product" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="quantity">Product Quantity</label>
-        <input type="text" name="quantity" class="form-control">
-      </div>
-        <input type="hidden" name="id" value="@Model.Id">
-      <button type="submit" class="btn btn-primary btn-block">Add</button>
-    </form>
+<div class="jumbotron">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <h1 class="text-center">Add Order for @Model.Name</h1>
+      <form action="/vendors/@Model.Id/orders" method="post">
+        <input id="vendorId" name="nameId" type="hidden" value="@Model.Id">
+        <div class="form-group">
+          <label for="product">Product</label>
+          <input type="text" name="product" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="quantity">Product Quantity</label>
+          <input type="text" name="quantity" class="form-control">
+        </div>
+          <input type="hidden" name="id" value="@Model.Id">
+        <button type="submit" class="btn btn-primary btn-block">Add</button>
+      </form>
+    </div>
   </div>
 </div>
