--- a/VendorOrder/Views/Orders/New.cshtml
+++ b/VendorOrder/Views/Orders/New.cshtml
@@ -14,12 +14,10 @@
           <label for="product">Product</label>
           <input type="text" name="product" class="form-control">
         </div>
-        <div class="form-group">
-          <label for="quantity">Product Quantity</label>
-          <input type="text" name="quantity" class="form-control">
-        </div>
           <input type="hidden" name="id" value="@Model.Id">
         <button type="submit" class="btn btn-primary btn-block">Add</button>
+        <hr/>
+        <a href='/vendors'><button type="button">Return to Vendor list</button></a>
       </form>
     </div>
   </div>
